--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/list.css">
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
+    <script src='//cdn.goroost.com/roostjs/s09ytp9xwrmfqymkrudph8cqakn1ti8l' async></script>
 </head>
 <body>
     <section>
