--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" type="text/css" href="../css/list.css">
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
     <script src='//cdn.goroost.com/roostjs/s09ytp9xwrmfqymkrudph8cqakn1ti8l' async></script>
+    <script>
+        var _roost = _roost || [];
+        _roost.push(['autoprompt', false]);
+    </script>
 </head>
 <body>
     <section>
         <h1>Habit List</h1>
+        <!-- Then your trigger -->
+        <button onclick="_roost.prompt();">Subscribe for Push</button>
+
         <ul id="habit-list">
             <template id="habit-template">
                 <li>
