--- a/src/list.html
+++ b/src/list.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/list.css">
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
+    <script src='//cdn.goroost.com/roostjs/s09ytp9xwrmfqymkrudph8cqakn1ti8l' async></script>
+    <script>
+        var _roost = _roost || [];
+        _roost.push(['autoprompt', false]);
+    </script>
 </head>
 <body>
     <section>
