--- a/index.html
+++ b/index.html
@@ -3,182 +3,10 @@
 <head>
     <title>Virtue / Vice</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/list.css">
-	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script src='//cdn.goroost.com/roostjs/s09ytp9xwrmfqymkrudph8cqakn1ti8l' async></script>
-    <script>
-        var _roost = _roost || [];
-        _roost.push(['autoprompt', false]);
-    </script>
 </head>
 <body>
-    <section>
-        <h1>Habit List</h1>
-        <!-- Then your trigger -->
-        <button onclick="_roost.prompt();">Subscribe for Push</button>
-
-        <ul id="habit-list">
-            <template id="habit-template">
-                <li>
-                    <ul class="habit-info">
-                        <li><div class="habit-name">Sleep 8 hours</div></li>
-                        <li><img class="habit-icon" src="../img/sleep.jpg" alt="habit icon"></li>
-                    </ul>
-                    <div class="message">
-                        <span class="message-total">
-                            <strong class="currStreak">2</strong> days in a row! Best Record: <strong class="bestStreak">5</strong><br>
-                            <svg height="25" width="150">
-                                <line x1="0" y1="0" x2="60" y2="0" style="stroke:rgba(65, 131, 215, 0.8);stroke-width:25" />
-                                <line x1="60" y1="0" x2="150" y2="0" style="stroke:rgba(171,171,171,0.6);stroke-width:25" />
-                            </svg>
-                        </span><br>
-                        <span class="message-today">Completed <strong>1/1</strong> for today!</span>
-                    </div>
-                    <div class="habit-op">
-                        <button type="button" class="op op-done" onclick="showMsg(this);" title="done">
-                            <img src="../img/done.svg" alt="Done">
-                        </button>
-                        <button type="button" class="op op-edit" onclick="editHabit(this);" title="edit habit">
-                            <img src="../img/edit.svg" alt="Edit">
-                        </button>
-                        <button type="button" class="op op-del" onclick="deleteHabit(this);" title="delete habit">
-                            <img src="../img/delete.svg" alt="Del">
-                        </button>
-                    </div>
-                </li>
-            </template>
-        </ul>
-    </section>
-
-    <button type="button" id="addHabit" onclick="location.href='add.html'" title="add habit">+</button>
-
     <script type="text/javascript">
-        Parse.initialize("Ih70t530LwJAnRJungwuPtE2nE3eakzmwVuZHb6O", "sE6Y6iMcoTTa9Z3pBCaAtwnD9F1L9SlWHBKlDQ7h");
-        var Habit = Parse.Object.extend("Habit");
-
-        function showMsg(element){
-            var msgElement = (element.parentNode.parentNode.getElementsByClassName("message"))[0];
-            // alert(msgElement.innerHTML);
-            msgElement.style.visibility="visible";
-        }
-
-        function editHabit(element) {
-            localStorage.setItem("toEdit", element.parentNode.parentNode.getAttribute("data-id"));
-            location = "edit.html?id=" + element.parentNode.parentNode.getAttribute("data-id");
-        }
-
-        function deleteHabit(element){
-            var child = element.parentNode.parentNode;
-            var parent = child.parentNode;
-
-            var query = new Parse.Query(Habit);
-            console.log("Element to delete: " + child.getAttribute("data-id"))
-            query.get(child.getAttribute("data-id"), {
-                success: function(habit) {
-                    // The object was retrieved successfully.
-                    habit.destroy({
-                        success: function(habit) {
-                            // The object was deleted from the Parse Cloud.
-                            parent.removeChild(child);
-                        },
-                        error: function(habit, error) {
-                            // The delete failed.
-                            // error is a Parse.Error with an error code and message.
-                            console.log("error here 2")
-                        }
-                    });
-                },
-                error: function(object, error) {
-                    // The object was not retrieved successfully.
-                    // error is a Parse.Error with an error code and message.
-                    console.log("error here1")
-                    console.log(error)
-                }
-            });
-        }
-
-        function addHabitToList(habit) {
-            var list = document.getElementById("habit-list");
-            var template = document.querySelector("#habit-template")
-            var clone = document.importNode(template.content, true);
-            // console.log(clone.childNodes.item("#habit-name"))
-
-            clone.firstElementChild.setAttribute("data-id", habit.id)
-            // clone.setAttribute("id", "yolo")
-            clone.querySelector(".habit-name").textContent = habit.get('name')
-            clone.querySelector(".currStreak").textContent = habit.get('currStreak')
-            clone.querySelector(".bestStreak").textContent = habit.get('bestStreak')
-
-            var habitIcon = habit.get("icon");
-            if (habitIcon) {
-                clone.querySelector(".habit-icon").src = habitIcon.url();
-            }
-
-            var res = list.appendChild(clone);
-        }
-
-        var query = new Parse.Query(Habit);
-        query.find({
-          success: function(results) {
-            // Do something with the returned Parse.Object values
-            for (var i = 0; i < results.length; i++) {
-                addHabitToList(results[i])
-                console.log(results[i])
-                console.log(results[i].id)
-            }
-            notifyMe()
-          },
-          error: function(error) {
-            alert("Error: " + error.code + " " + error.message);
-          }
-        });
-
-        function notifyMe() {
-              console.log("woooo notifs")
-              console.log(Notification.permission)
-
-              // Let's check if the browser supports notifications
-              if (!("Notification" in window)) {
-                alert("This browser does not support desktop notification");
-                console.log("browser doesn't support notifs")
-              }
-              // Let's check whether notification permissions have already been granted
-              else if (Notification.permission === "granted") {
-                // If it's okay let's create a notification
-                spawnNotification("Vice/Virtue", "home slice")
-              }
-
-              // Otherwise, we need to ask the user for permission
-              else if (Notification.permission !== 'denied') {
-                Notification.requestPermission(function (permission) {
-                  // If the user accepts, let's create a notification
-                  if (permission === "granted") {
-                    var notification = new Notification("Hi there!");
-                  }
-                });
-              }
-
-              // Otherwise, we need to ask the user for permission
-              else if (Notification.permission === 'denied') {
-                Notification.requestPermission(function (permission) {
-                  // If the user accepts, let's create a notification
-                  if (permission === "granted") {
-                    var notification = new Notification("Hi there!");
-                  }
-                });
-              }
-          // At last, if the user has denied notifications, and you
-          // want to be respectful there is no need to bother them any more.
-        }
-
-        function spawnNotification(theTitle, theBody) {
-            var options = {
-                body: theBody,
-                icon: "logo.png"
-            }
-            var n = new Notification(theTitle,options);
-        }
+        location = "/list.html"
     </script>
 </body>
 </html>
