--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script type="text/javascript">
-        location = "/list.html"
+        location = "src/list.html"
     </script>
 </body>
 </html>
