upload icon in line, down button

--- a/src/add.html
+++ b/src/add.html
@@ -25,13 +25,14 @@
 				<img id="icon2" class="icon" onclick="selectImage('icon2');" src="../img/salad.jpg" alt="eat image"/>
 				<img id="icon3" class="icon" onclick="selectImage('icon3');" src="../img/run.jpg" alt="run image"/>
 
+
 				<label class="myFile">
 					<img id="icon4" class="icon" onchange="uploadIcon()" src="../img/add.png" alt="find a image" />
 					<input type="file" id="iconFileUpload" />
 				</label>
 
 				<div class="hide">
-					<img id="myImg" class = "icon" onclick="selectImage('myImg');" src="#" alt=""/>
+					<img id="myImg" class="icon" onclick="selectImage('myImg');" src="#" alt="uploaded image"/>
 				</div>
 
 				<p><label>Weekly Frequency</label></p>
