--- a/src/list.html
+++ b/src/list.html
@@ -44,6 +44,9 @@
                         <button type="button" class="op op-done" id="thumbs" onclick="showMsg(this);" title="done">
                             <img src="../img/done.svg" alt="Done">
                         </button>
+                        <button type="button" class="op op-down" id="thumbs" title="done">
+                            <img src="../img/thumbsdown.jpg" alt="Down">
+                        </button>
                         <button type="button" class="op op-edit" onclick="editHabit(this);" title="edit habit">
                             <img src="../img/edit.svg" alt="Edit">
                         </button>
