fixed scrolling when checkbox or radiobutton selected, fixed spacing in notifications and alarms

--- a/src/add.html
+++ b/src/add.html
@@ -38,13 +38,13 @@
 				<p><label>Weekly Frequency</label></p>
 				<p><label class="error_message" id="noFrequency" style="display:none">Please select a weekly frequency.</label></p>
 				<div id="ck-button">
-					<label> <input id="isSun" type="checkbox" name="date" value="sunday"><span>Sun</span></label>
-					<label> <input id="isMon" type="checkbox" name="date" value="monday"><span>Mon</span></label>
-					<label> <input id="isTues" type="checkbox" name="date" value="tuesday"><span>Tues</span></label>
-					<label> <input id="isWed" type="checkbox" name="date" value="wednesday"><span>Wed</span></label>
-					<label> <input id="isThurs" type="checkbox" name="date" value="thursday"><span>Thur</span></label>
-					<label> <input id="isFri" type="checkbox" name="date" value="friday"><span>Fri</span></label>
-					<label> <input id="isSat" type="checkbox" name="date" value="saturday"><span>Sat</span></label>
+					<label> <input style="display:none" id="isSun" type="checkbox" name="date" value="sunday"><span>Sun</span></label>
+					<label> <input style="display:none" id="isMon" type="checkbox" name="date" value="monday"><span>Mon</span></label>
+					<label> <input style="display:none" id="isTues" type="checkbox" name="date" value="tuesday"><span>Tues</span></label>
+					<label> <input style="display:none" id="isWed" type="checkbox" name="date" value="wednesday"><span>Wed</span></label>
+					<label> <input style="display:none" id="isThurs" type="checkbox" name="date" value="thursday"><span>Thur</span></label>
+					<label> <input style="display:none" id="isFri" type="checkbox" name="date" value="friday"><span>Fri</span></label>
+					<label> <input style="display:none" id="isSat" type="checkbox" name="date" value="saturday"><span>Sat</span></label>
 				</div>
 
 
@@ -52,9 +52,9 @@
 				<p><label class="error_message" id="noDailyFrequency" style="display:none">Please select a daily frequency or enter your own (<10).</label></p>
 				<p><label class="error_message" id="selectedBothFrequencies" style="display:none">Please select EITHER a daily frequency OR enter your own (<10).</label></p>
 				<div id="daily-button">
-					<label> <input id="once" type="radio" name="day" value="one" onclick="notify();"><span>1</span></label>
-					<label> <input id="twice" type="radio" name="day" value="two" onclick="notify();"><span>2</span></label>
-					<label> <input id="thrice" type="radio" name="day" value="three"
+					<label> <input style="display:none" id="once" type="radio" name="day" value="one" onclick="notify();"><span>1</span></label>
+					<label> <input style="display:none" id="twice" type="radio" name="day" value="two" onclick="notify();"><span>2</span></label>
+					<label> <input style="display:none" id="thrice" type="radio" name="day" value="three"
 					onclick="notify();"><span>3</span></label>
 					<span id="times">times</span>
 				</div>
