--- a/src/list.html
+++ b/src/list.html
@@ -20,7 +20,7 @@
                     </ul>
                     <div class="message">
                         <span class="message-total">
-                            <strong class="currStreak">2</strong> days in a row! Best Record: <strong class="bestStreak">5</strong><br>
+                            <strong class="currStreak">2</strong> times in a row! Best Record: <strong class="bestStreak">5</strong><br>
                             <svg height="25" width="150">
                                 <line x1="0" y1="0" x2="60" y2="0" style="stroke:rgba(65, 131, 215, 0.8);stroke-width:25" />
                                 <line x1="60" y1="0" x2="150" y2="0" style="stroke:rgba(171,171,171,0.6);stroke-width:25" />
@@ -31,17 +31,17 @@
 
 
                     <div class="days">
-                        <p id="onSunday">S</p>
-                        <p id="onMonday">M</p>
-                        <p id="onTuesday">T</p>
-                        <p id="onWednesday">W</p>
-                        <p id="onThursday">T</p>
-                        <p id="onFriday">F</p>
-                        <p id="onSaturday">S</p>
+                        <p id="onSunday" class="dayText">S</p>
+                        <p id="onMonday" class="dayText">M</p>
+                        <p id="onTuesday" class="dayText">T</p>
+                        <p id="onWednesday" class="dayText">W</p>
+                        <p id="onThursday" class="dayText">T</p>
+                        <p id="onFriday" class="dayText">F</p>
+                        <p id="onSaturday" class="dayText">S</p>
                     </div>
 
                     <div class="habit-op">
-                        <button type="button" class="op op-done" id="thumbs" onclick="showMsg(this);" title="done">
+                        <button type="button" class="op op-done" id="thumbs" onclick="completeHabit(this); showMsg(this);" title="done">
                             <img src="../img/done.svg" alt="Done">
                         </button>
                         <button type="button" class="op op-edit" onclick="editHabit(this);" title="edit habit">
@@ -60,8 +60,9 @@
 
     <script type="text/javascript">
         Parse.initialize("Ih70t530LwJAnRJungwuPtE2nE3eakzmwVuZHb6O", "sE6Y6iMcoTTa9Z3pBCaAtwnD9F1L9SlWHBKlDQ7h");
-
         var Habit = Parse.Object.extend("Habit");
+        var daysArray = [0, 1, 2, 3, 4, 5, 6];
+        var daysBoolArr = ['onSunday', 'onMonday', 'onTuesday', 'onWednesday', 'onThursday', 'onFriday', 'onSaturday'];
 
         function showMsg(element){
             var msgElement = (element.parentNode.parentNode.getElementsByClassName("message"))[0];
@@ -70,6 +71,36 @@
             msgElement.style.visibility="visible";
         }
 
+        // Returns 0 if dates are the same, 1 if date1 is later than date2, and -1 if date1 is earlier than date2
+        // Date parameters must be in the form of Month/Date/Year
+        function compareDates(date1, date2) {
+            var dateArr1 = date1.split("/");
+            var dateArr2 = date2.split("/");
+
+            // Compare years
+            if (dateArr1[2] > dateArr2[2]) {
+                return 1;
+            } else if (dateArr1[2] < dateArr2[2]) {
+                return -1;
+            } else {
+                // If years are the same, compare months
+                if (dateArr1[0] > dateArr2[0]) {
+                    return 1;
+                } else if (dateArr1[0] < dateArr2[0]) {
+                    return -1;
+                } else {
+                    // if year and month match, compare dates
+                    if (dateArr1[1] > dateArr2[1]) {
+                        return 1;
+                    } else if (dateArr1[1] < dateArr2[1]) {
+                        return -1;
+                    } else {
+                        // Dates match if match on year, month, and date
+                        return 0;
+                    }
+                }
+            }
+        }
 
         function editHabit(element) {
             localStorage.setItem("toEdit", element.parentNode.parentNode.getAttribute("data-id"));
@@ -129,63 +160,49 @@
                 switch (element) {
                 case 'onSunday':
                     if (n == 0) {
-                        clone.getElementById("thumbs").style.pointerEvents = "auto";
-                        clone.getElementById("thumbs").style.background = "rgba(0, 177, 106, 0.8)";
-                        clone.getElementById("thumbs").style.border = "2px solid rgba(0, 128, 0, 0.3)";
+                        clone.getElementById("thumbs").className = clone.getElementById("thumbs").className + " enableThumbsUp";
                     }
                     clone.querySelector("#onSunday").style.color = "black";
                     clone.querySelector("#onSunday").style.fontWeight = "bold";                    
                     break;
                 case 'onMonday':
-                     if (n == 1) {
-                        clone.getElementById("thumbs").style.pointerEvents = "auto";
-                        clone.getElementById("thumbs").style.background = "rgba(0, 177, 106, 0.8)";
-                        clone.getElementById("thumbs").style.border = "2px solid rgba(0, 128, 0, 0.3)";
+                    if (n == 1) {
+                        clone.getElementById("thumbs").className = clone.getElementById("thumbs").className + " enableThumbsUp";
                     }
                     clone.querySelector("#onMonday").style.color = "black";
                     clone.querySelector("#onMonday").style.fontWeight = "bold";
                     break;
                 case 'onTuesday':
                     if (n == 2) {
-                        clone.getElementById("thumbs").style.pointerEvents = "auto";
-                        clone.getElementById("thumbs").style.background = "rgba(0, 177, 106, 0.8)";
-                        clone.getElementById("thumbs").style.border = "2px solid rgba(0, 128, 0, 0.3)";
+                        clone.getElementById("thumbs").className = clone.getElementById("thumbs").className + " enableThumbsUp";
                     }
                     clone.querySelector("#onTuesday").style.color = "black";
                     clone.querySelector("#onTuesday").style.fontWeight = "bold";
                     break;
                 case 'onWednesday':
                     if (n == 3) {
-                        clone.getElementById("thumbs").style.pointerEvents = "auto";
-                        clone.getElementById("thumbs").style.background = "rgba(0, 177, 106, 0.8)";
-                        clone.getElementById("thumbs").style.border = "2px solid rgba(0, 128, 0, 0.3)";
+                        clone.getElementById("thumbs").className = clone.getElementById("thumbs").className + " enableThumbsUp";
                     }
                     clone.querySelector("#onWednesday").style.color = "black";
                     clone.querySelector("#onWednesday").style.fontWeight = "bold";
                     break;
                 case 'onThursday':
                     if (n == 4) {
-                        clone.getElementById("thumbs").style.pointerEvents = "auto";
-                        clone.getElementById("thumbs").style.background = "rgba(0, 177, 106, 0.8)";
-                        clone.getElementById("thumbs").style.border = "2px solid rgba(0, 128, 0, 0.3)";
+                        clone.getElementById("thumbs").className = clone.getElementById("thumbs").className + " enableThumbsUp";
                     }
                     clone.querySelector("#onThursday").style.color = "black";
                     clone.querySelector("#onThursday").style.fontWeight = "bold";
                     break;
                 case 'onFriday':
                     if (n == 5) {
-                        clone.getElementById("thumbs").style.pointerEvents = "auto";
-                        clone.getElementById("thumbs").style.background = "rgba(0, 177, 106, 0.8)";
-                        clone.getElementById("thumbs").style.border = "2px solid rgba(0, 128, 0, 0.3)";
+                        clone.getElementById("thumbs").className = clone.getElementById("thumbs").className + " enableThumbsUp";
                     }
                     clone.querySelector("#onFriday").style.color = "black";
                     clone.querySelector("#onFriday").style.fontWeight = "bold";
                     break;
                 case 'onSaturday':
                     if (n == 6) {
-                        clone.getElementById("thumbs").style.pointerEvents = "auto";
-                        clone.getElementById("thumbs").style.background = "rgba(0, 177, 106, 0.8)";
-                        clone.getElementById("thumbs").style.border = "2px solid rgba(0, 128, 0, 0.3)";
+                        clone.getElementById("thumbs").className = clone.getElementById("thumbs").className + " enableThumbsUp";
                     }
                     clone.querySelector("#onSaturday").style.color = "black";
                     clone.querySelector("#onSaturday").style.fontWeight = "bold";
@@ -194,7 +211,6 @@
             }
 
         }
-
 
         function addHabitToList(habit) {
             var list = document.getElementById("habit-list");
@@ -205,10 +221,6 @@
 
             clone.firstElementChild.setAttribute("data-id", habit.id)
             // clone.setAttribute("id", "yolo")
-            clone.querySelector(".habit-name").textContent = habit.get('name')
-            clone.querySelector(".currStreak").textContent = habit.get('currStreak')
-            clone.querySelector(".bestStreak").textContent = habit.get('bestStreak')
-            clone.querySelector(".frequencyPerDay").textContent = habit.get('frequency');
 
             // Set up days display for each habit
             days(habit, clone);
@@ -218,24 +230,69 @@
                 clone.querySelector(".habit-icon").src = habitIcon.url();
             }
 
+            /*
+             * For each habit, check if currDate and actual current date are different
+             * If they are, calculate the next day of habit from currDate, and see if it is
+             * greater than actual current date; if it is, end streak
+             * Also reset thumbCtr and numCompleted for the day
+             */
+            var dateStr = habit.get('currDate');
+            var dateObj = new Date(dateStr);
+            var currentDate = new Date();
+            var month = currentDate.getUTCMonth() + 1; //months from 1-12
+            var day = currentDate.getUTCDate();
+            var year = currentDate.getUTCFullYear();
+            var currDateStr = month + "/" + day + "/" + year;
+
+            if (compareDates(dateStr, currDateStr) != 0) {
+                // Different day, so reset thumbCtr and numCompleted -- reset streak if did not complete habits
+                if (habit.get('thumbCtr') != habit.get('frequency') && habit.get('numCompleted') < habit.get('frequency')) {
+                    habit.set('currStreak', 0);
+                }
+                habit.set('thumbCtr', 0);
+                habit.set('numCompleted', 0);
+
+                var daysToAdd = 0;
+                var dateStrDay = habit.get('currDay');
+                while (daysToAdd <= 7) {
+                    dateStrDay = (dateStrDay + 1) % 7;
+                    daysToAdd++;
+                    if (habit.get(daysBoolArr[dateStrDay])) {
+                        break;
+                    }
+                }
+
+                dateObj.setDate(dateObj.getDate() + daysToAdd);
+                var nextDateStr = (dateObj.getUTCMonth() + 1) + "/" + dateObj.getUTCDate() + "/" + dateObj.getUTCFullYear();
+
+                // Missed a day for habit, so reset streak
+                if (compareDates(currDateStr, nextDateStr) == 1) {
+                    habit.set('currStreak', 0);
+                }
+
+                // Update current date for habits
+                habit.set('currDate', currDateStr);
+                habit.set('currDay', currentDate.getDay());
+                habit.save();
+            }
+            else {
+                // If user already completed/failed habit the specified number of times for that day, disable
+                //   both the thumbs up and thumbs down button
+                if (habit.get('thumbCtr') == habit.get('frequency')) {
+                    clone.querySelector(".op-done").className = "op op-done";
+                    // Display message if habit completed for the day
+                    showMsg(clone.querySelector(".op-done"));
+                }
+            }
+
+            clone.querySelector(".habit-name").textContent = habit.get('name');
+            clone.querySelector(".currStreak").textContent = habit.get('currStreak');
+            clone.querySelector(".bestStreak").textContent = habit.get('bestStreak');
+            clone.querySelector(".frequencyPerDay").textContent = habit.get('frequency');
+            clone.querySelector(".completed").textContent = habit.get('numCompleted');
+
             var res = list.appendChild(clone);
         }
-
-        var query = new Parse.Query(Habit);
-        query.find({
-          success: function(results) {
-            // Do something with the returned Parse.Object values
-            for (var i = 0; i < results.length; i++) {
-                addHabitToList(results[i])
-                console.log(results[i])
-                console.log(results[i].id)
-            }
-            notifyMe()
-          },
-          error: function(error) {
-            alert("Error: " + error.code + " " + error.message);
-          }
-        });
 
         function notifyMe() {
               console.log("woooo notifs")
@@ -282,6 +339,85 @@
             }
             var n = new Notification(theTitle,options);
         }
+
+        function completeHabit(element) {
+            var habitID = element.parentNode.parentNode.getAttribute("data-id");
+            var query = new Parse.Query(Habit);
+
+            query.get(habitID, {
+                success: function(habit) {
+                    // The object was retrieved successfully.
+                    var numCompleted = habit.get("numCompleted");
+                    var thumbCtr = habit.get("thumbCtr");
+                    var frequency = habit.get("frequency");
+                    var currStreak = habit.get("currStreak");
+                    var bestStreak = habit.get("bestStreak");
+
+                    if (thumbCtr < frequency) {
+                        thumbCtr++;
+                        numCompleted++;
+                        currStreak++;
+
+                        if (currStreak > bestStreak) {
+                            bestStreak = currStreak;
+                        }
+
+                        habit.set("numCompleted", numCompleted);
+                        habit.set("thumbCtr", thumbCtr);
+                        habit.set("currStreak", currStreak);
+                        habit.set("bestStreak", bestStreak);
+
+                        habit.save(null, {
+                            success: function(updatedHabit) {
+                                // Execute any logic that should take place after the object is saved.
+                                // Update message
+                                element.parentNode.parentNode.querySelector(".currStreak").textContent = updatedHabit.get('currStreak')
+                                element.parentNode.parentNode.querySelector(".bestStreak").textContent = updatedHabit.get('bestStreak');
+                                element.parentNode.parentNode.querySelector(".completed").textContent = updatedHabit.get('numCompleted');
+                            },
+                            error: function(updatedHabit, error) {
+                                // Execute any logic that should take place if the save fails.
+                                // error is a Parse.Error with an error code and message.
+                                console.log('Failed to update object, with error code: ' + error.message);
+                                alert("Unable to update habit!  Please check your network connection and try again later.");
+                            }
+                        });
+                    }
+
+                    if (thumbCtr == frequency) {
+                        // Disable thumbs up and thumbs down buttons
+                        element.parentNode.parentNode.querySelector('#thumbs').className = "op op-done";
+                    }
+                },
+                error: function(object, error) {
+                    // The object was not retrieved successfully.
+                    // error is a Parse.Error with an error code and message.
+                    console.log("Habit object was not retrieved successfully!");
+                    alert("Unable to update habit!  Please check your network connection and try again later.");
+                }
+            });
+        }
+
+        function failHabit(element) {
+
+        }
+
+        // Script to run when page loads
+        var query = new Parse.Query(Habit);
+        query.find({
+          success: function(results) {
+            // Do something with the returned Parse.Object values
+            for (var i = 0; i < results.length; i++) {
+                addHabitToList(results[i])
+                console.log(results[i])
+                console.log(results[i].id)
+            }
+            notifyMe()
+          },
+          error: function(error) {
+            alert("Error: " + error.code + " " + error.message);
+          }
+        });
     </script>
 </body>
 </html>
