working on notifications

--- a/src/list.html
+++ b/src/list.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/list.css">
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script src='//cdn.goroost.com/roostjs/310u3vutvaa6gyw4o0mq9umd21en0ygc' async></script>
-    <script>
-        var _roost = _roost || [];
-    </script>
+    <script src='../js/notifications.js'></script>
 </head>
 <body>
+    <button class="notifbutton">Push me</button>
     <section>
         <h1>Habit List</h1>
         <ul id="habit-list">
