--- a/src/list.html
+++ b/src/list.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/list.css">
+
+    <link rel="manifest" href="/manifest.json">
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
     <script src='../js/notifications.js'></script>
+
 </head>
 <body>
     <button class="notifbutton">Push me</button>
