--- a/src/list.html
+++ b/src/list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/list.css">
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="../manifest.json">
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
     <script src='../js/notifications.js'></script>
 
