--- a/src/list.html
+++ b/src/list.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../css/list.css">
 
     <link rel="manifest" href="../manifest.json">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
     <script src='../js/notifications.js'></script>
 
