Used templates for notification alarms and implemented uploading alarms to Parse

--- a/src/list.html
+++ b/src/list.html
@@ -107,7 +107,7 @@
         }
 
         function editHabit(element) {
-            localStorage.setItem("toEdit", element.parentNode.parentNode.getAttribute("data-id"));
+            // localStorage.setItem("toEdit", element.parentNode.parentNode.getAttribute("data-id"));
             location = "edit.html?id=" + element.parentNode.parentNode.getAttribute("data-id");
         }
 
