--- a/src/add.html
+++ b/src/add.html
@@ -64,270 +64,57 @@
 
 				<p id="notifications"><label>Notifications:</label></p>
 				<div class="onoffswitch" >
-   					<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked onclick="incCounter();">
+   					<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked onclick="switchNotification();">
     				<label class="onoffswitch-label" for="myonoffswitch">
         			<span class="onoffswitch-inner"></span>
         			<span class="onoffswitch-switch"></span>
     				</label>
 				</div>
+				<template id="alarm">
+					<li>
+						<p class="alarm-name">Alarm 1</p>
+						<select id="hr1">
+		  					<option value="1">1</option>
+		 					<option value="2">2</option>
+		  					<option value="3">3</option>
+						  	<option value="4">4</option>
+		  					<option value="5">5</option>
+		 					<option value="6">6</option>
+		  					<option value="7">7</option>
+						  	<option value="8">8</option>
+		  					<option value="9">9</option>
+		 					<option value="10">10</option>
+		  					<option value="11">11</option>
+						  	<option value="12">12</option>
+						</select>
 
-				<div class="notifications1">
-				<p id="alarm">Alarm 1</p>
-					<select id="hr1">
-	  					<option value="1">1</option>
-	 					<option value="2">2</option>
-	  					<option value="3">3</option>
-					  	<option value="4">4</option>
-	  					<option value="5">5</option>
-	 					<option value="6">6</option>
-	  					<option value="7">7</option>
-					  	<option value="8">8</option>
-	  					<option value="9">9</option>
-	 					<option value="10">10</option>
-	  					<option value="11">11</option>
-					  	<option value="12">12</option>
-					</select>
+						<select id="min1">
+		  					<option value="00">:00</option>
+		 					<option value="05">:05</option>
+		  					<option value="10">:10</option>
+						  	<option value="15">:15</option>
+		  					<option value="20">:20</option>
+		 					<option value="25">:25</option>
+		 					<option value="30">:30</option>
+		  					<option value="35">:35</option>
+						  	<option value="40">:40</option>
+		  					<option value="45">:45</option>
+		 					<option value="50">:50</option>
+		  					<option value="55">:55</option>
 
-					<select id="min1">
-	  					<option value="00">:00</option>
-	 					<option value="01">:01</option>
-	  					<option value="02">:02</option>
-					  	<option value="03">:03</option>
-	  					<option value="04">:04</option>
-	 					<option value="05">:05</option>
-	 					<option value="06">:06</option>
-	  					<option value="07">:07</option>
-					  	<option value="08">:08</option>
-	  					<option value="09">:09</option>
-	 					<option value="10">:10</option>
-	  					<option value="11">:11</option>
-					  	<option value="12">:12</option>
-					  	<option value="13">:13</option>
-	  					<option value="14">:14</option>
-	 					<option value="15">:15</option>
-	 					<option value="16">:16</option>
-	  					<option value="17">:17</option>
-					  	<option value="18">:18</option>
-	  					<option value="19">:19</option>
-	 					<option value="20">:20</option>
-	  					<option value="21">:21</option>
-					  	<option value="22">:22</option>
-					  	<option value="23">:23</option>
-	  					<option value="24">:24</option>
-	 					<option value="25">:25</option>
-	 					<option value="26">:26</option>
-	  					<option value="27">:27</option>
-					  	<option value="28">:28</option>
-	  					<option value="29">:29</option>
-	 					<option value="30">:30</option>
-	  					<option value="31">:31</option>
-					  	<option value="32">:32</option>
-					  	<option value="33">:33</option>
-	  					<option value="34">:34</option>
-	 					<option value="35">:35</option>
-	 					<option value="36">:36</option>
-	  					<option value="37">:37</option>
-					  	<option value="38">:38</option>
-	  					<option value="39">:39</option>
-	  					<option value="40">:40</option>
-	  					<option value="41">:41</option>
-					  	<option value="42">:42</option>
-					  	<option value="43">:43</option>
-	  					<option value="44">:44</option>
-	 					<option value="45">:45</option>
-	 					<option value="46">:46</option>
-	  					<option value="47">:47</option>
-					  	<option value="48">:48</option>
-	  					<option value="49">:49</option>
-	 					<option value="50">:50</option>
-	  					<option value="51">:51</option>
-					  	<option value="52">:52</option>
-					  	<option value="53">:53</option>
-	  					<option value="54">:54</option>
-	 					<option value="55">:55</option>
-	 					<option value="56">:56</option>
-	  					<option value="57">:57</option>
-					  	<option value="58">:58</option>
-	  					<option value="59">:59</option>
-					</select>
+						</select>
 
-					<select id="am1">
-	  					<option value="am">am</option>
-	 					<option value="pm">pm</option>
-					</select>
-				</div>	
+						<select id="am1">
+		  					<option value="am">am</option>
+		 					<option value="pm">pm</option>
+						</select>
+					</li>
+				</template>
 
-			<div class="notifications2">
-				<p id="alarm">Alarm 2</p>
-					<select id="hr2">
-	  					<option value="1">1</option>
-	 					<option value="2">2</option>
-	  					<option value="3">3</option>
-					  	<option value="4">4</option>
-	  					<option value="5">5</option>
-	 					<option value="6">6</option>
-	  					<option value="7">7</option>
-					  	<option value="8">8</option>
-	  					<option value="9">9</option>
-	 					<option value="10">10</option>
-	  					<option value="11">11</option>
-					  	<option value="12">12</option>
-					</select>
+				<ul id="alarm-list">
+					
+				</ul>
 
-					<select id="min2">
-	  					<option value="00">:00</option>
-	 					<option value="01">:01</option>
-	  					<option value="02">:02</option>
-					  	<option value="03">:03</option>
-	  					<option value="04">:04</option>
-	 					<option value="05">:05</option>
-	 					<option value="06">:06</option>
-	  					<option value="07">:07</option>
-					  	<option value="08">:08</option>
-	  					<option value="09">:09</option>
-	 					<option value="10">:10</option>
-	  					<option value="11">:11</option>
-					  	<option value="12">:12</option>
-					  	<option value="13">:13</option>
-	  					<option value="14">:14</option>
-	 					<option value="15">:15</option>
-	 					<option value="16">:16</option>
-	  					<option value="17">:17</option>
-					  	<option value="18">:18</option>
-	  					<option value="19">:19</option>
-	 					<option value="20">:20</option>
-	  					<option value="21">:21</option>
-					  	<option value="22">:22</option>
-					  	<option value="23">:23</option>
-	  					<option value="24">:24</option>
-	 					<option value="25">:25</option>
-	 					<option value="26">:26</option>
-	  					<option value="27">:27</option>
-					  	<option value="28">:28</option>
-	  					<option value="29">:29</option>
-	 					<option value="30">:30</option>
-	  					<option value="31">:31</option>
-					  	<option value="32">:32</option>
-					  	<option value="33">:33</option>
-	  					<option value="34">:34</option>
-	 					<option value="35">:35</option>
-	 					<option value="36">:36</option>
-	  					<option value="37">:37</option>
-					  	<option value="38">:38</option>
-	  					<option value="39">:39</option>
-	  					<option value="40">:40</option>
-	  					<option value="41">:41</option>
-					  	<option value="42">:42</option>
-					  	<option value="43">:43</option>
-	  					<option value="44">:44</option>
-	 					<option value="45">:45</option>
-	 					<option value="46">:46</option>
-	  					<option value="47">:47</option>
-					  	<option value="48">:48</option>
-	  					<option value="49">:49</option>
-	 					<option value="50">:50</option>
-	  					<option value="51">:51</option>
-					  	<option value="52">:52</option>
-					  	<option value="53">:53</option>
-	  					<option value="54">:54</option>
-	 					<option value="55">:55</option>
-	 					<option value="56">:56</option>
-	  					<option value="57">:57</option>
-					  	<option value="58">:58</option>
-	  					<option value="59">:59</option>
-					</select>
-
-					<select id="am2">
-	  					<option value="am">am</option>
-	 					<option value="pm">pm</option>
-					</select>
-				</div>	
-
-				<div class="notifications3">
-					<p id="alarm">Alarm 3</p>
-					<select id="hr3">
-	  					<option value="1">1</option>
-	 					<option value="2">2</option>
-	  					<option value="3">3</option>
-					  	<option value="4">4</option>
-	  					<option value="5">5</option>
-	 					<option value="6">6</option>
-	  					<option value="7">7</option>
-					  	<option value="8">8</option>
-	  					<option value="9">9</option>
-	 					<option value="10">10</option>
-	  					<option value="11">11</option>
-					  	<option value="12">12</option>
-					</select>
-
-					<select id="min3">
-	  					<option value="00">:00</option>
-	 					<option value="01">:01</option>
-	  					<option value="02">:02</option>
-					  	<option value="03">:03</option>
-	  					<option value="04">:04</option>
-	 					<option value="05">:05</option>
-	 					<option value="06">:06</option>
-	  					<option value="07">:07</option>
-					  	<option value="08">:08</option>
-	  					<option value="09">:09</option>
-	 					<option value="10">:10</option>
-	  					<option value="11">:11</option>
-					  	<option value="12">:12</option>
-					  	<option value="13">:13</option>
-	  					<option value="14">:14</option>
-	 					<option value="15">:15</option>
-	 					<option value="16">:16</option>
-	  					<option value="17">:17</option>
-					  	<option value="18">:18</option>
-	  					<option value="19">:19</option>
-	 					<option value="20">:20</option>
-	  					<option value="21">:21</option>
-					  	<option value="22">:22</option>
-					  	<option value="23">:23</option>
-	  					<option value="24">:24</option>
-	 					<option value="25">:25</option>
-	 					<option value="26">:26</option>
-	  					<option value="27">:27</option>
-					  	<option value="28">:28</option>
-	  					<option value="29">:29</option>
-	 					<option value="30">:30</option>
-	  					<option value="31">:31</option>
-					  	<option value="32">:32</option>
-					  	<option value="33">:33</option>
-	  					<option value="34">:34</option>
-	 					<option value="35">:35</option>
-	 					<option value="36">:36</option>
-	  					<option value="37">:37</option>
-					  	<option value="38">:38</option>
-	  					<option value="39">:39</option>
-	  					<option value="40">:40</option>
-	  					<option value="41">:41</option>
-					  	<option value="42">:42</option>
-					  	<option value="43">:43</option>
-	  					<option value="44">:44</option>
-	 					<option value="45">:45</option>
-	 					<option value="46">:46</option>
-	  					<option value="47">:47</option>
-					  	<option value="48">:48</option>
-	  					<option value="49">:49</option>
-	 					<option value="50">:50</option>
-	  					<option value="51">:51</option>
-					  	<option value="52">:52</option>
-					  	<option value="53">:53</option>
-	  					<option value="54">:54</option>
-	 					<option value="55">:55</option>
-	 					<option value="56">:56</option>
-	  					<option value="57">:57</option>
-					  	<option value="58">:58</option>
-	  					<option value="59">:59</option>
-					</select>
-
-					<select id="am3">
-	  					<option value="am">am</option>
-	 					<option value="pm">pm</option>
-					</select>
-				</div>
 				<p id="save_p"><input id="save" type="button" value="Save It" onclick="validateForm();"></p> <!-- onclick ="location.href='list.html'"  addHabit() used to be inside-->
 			</form>
 
@@ -340,7 +127,7 @@
 			var defaultImage = Parse.Object.extend("DefaultImages");
 			var counter = 0;
 
-			$("input[type='radio']").click(function()
+			/* $("input[type='radio']").click(function()
 			{
 			  var previousValue = $(this).attr('previousValue');
 			  var name = $(this).attr('name');
@@ -355,7 +142,125 @@
 			    $("input[name="+name+"]:radio").attr('previousValue', false);
 			    $(this).attr('previousValue', 'checked');
 			  }
+			}); */
+
+			function addAlarmToList(alarmNumber) 
+	        {
+	            var list = document.getElementById("alarm-list");
+	            var template = document.querySelector("#alarm")
+	            var clone = document.importNode(template.content, true);
+
+	            clone.querySelector(".alarm-name").textContent = "Alarm " + alarmNumber;
+
+	            var res = list.appendChild(clone);
+       		}
+
+			$("input[type='radio']").click(function()
+			{
+			  var previousValue = $(this).attr('previousValue');
+			  var name = $(this).attr('name');
+			  var frequencyAlarm = $(this).val();
+
+			  if (previousValue == 'checked')
+			  {
+			    $(this).removeAttr('checked');
+			    $(this).attr('previousValue', false);
+			  }
+			  else
+			  {
+			    $("input[name="+name+"]:radio").attr('previousValue', false);
+			    $(this).attr('previousValue', 'checked');
+			  }
+			  var others_text = document.getElementById('others');
+			  others_text.value = "";
+
+			  if (frequencyAlarm == "one")
+			  	frequencyAlarm = 1;
+			  else if (frequencyAlarm == "two")
+			  	frequencyAlarm = 2;
+			  else if (frequencyAlarm == "three")
+			  	frequencyAlarm = 3;
+
+			  $('#alarm-list').empty();
+			  var switchState = document.getElementById('myonoffswitch');
+			  if (switchState.checked)
+			  {
+				  for (var i = 1; i <= frequencyAlarm; i++) 
+				  {
+	                	addAlarmToList(i);
+	              }
+          	  }
 			});
+
+			//function called when other_text changes 
+			$("#others").change(function (e) {
+   				$("input[type='radio']").removeAttr('checked');
+   				//var radioButton = document.getElementById('once');
+   				//if (radioButton.attr('previousValue') == 'checked')
+   				//{
+   				// 	radioButton.removeAttr('checked');
+			    //	radioButton.attr('previousValue', false);
+			    //}
+			    $('#alarm-list').empty();
+			    if ($('#others').val() < 10 && $('#others').val() % 1 == 0  && $('#others').val() > 0 )
+			    {
+				    var frequencyAlarm;
+
+					frequencyAlarm = $('#others').val();
+
+					var switchState = document.getElementById('myonoffswitch');
+				    if (switchState.checked)
+				    {
+					  for (var i = 1; i <= frequencyAlarm; i++) 
+					  {
+		                	addAlarmToList(i);
+		              }
+	          	    }
+          		}
+			});
+
+			function switchNotification() 
+			{
+				var switchState = document.getElementById('myonoffswitch');
+				$('#alarm-list').empty(); //needed in either case (if notification on or off)
+
+				if (switchState.checked)
+				{	
+					var frequencyAlarm;
+					if (document.getElementById('once').checked)
+					{
+						frequencyAlarm = 1;
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
+					}
+					else if (document.getElementById('twice').checked)
+					{
+						frequencyAlarm = 2;
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
+					}
+					else if (document.getElementById('thrice').checked)
+					{
+						frequencyAlarm = 3;
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
+					}
+					else if($('#others').val() < 10 && $('#others').val() % 1 == 0 && $('#others').val() > 0 )
+					{
+						frequencyAlarm = $('#others').val();
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
+					}
+				}
+			}
 
 			function selectImage(name) {
 				//Clear all the other effects
@@ -565,6 +470,30 @@
 				habitToAdd.set("frequency", frequency);
 				habitToAdd.set("numCompleted", 0);
 				habitToAdd.set("thumbCtr", 0);
+
+				// Set alarms for habit
+				var habitAlarms = [];
+				var hours = '';
+				var minutes = '';
+				var alarmList = document.getElementById("alarm-list");
+				var alarms = alarmList.getElementsByTagName("li");
+				for (var i = 0; i < alarms.length; ++i) {
+					hours = parseInt(alarms[i].querySelector('#hr1').value);
+					minutes = parseInt(alarms[i].querySelector('#min1').value);
+
+					hours = hours % 12;
+
+					if (alarms[i].querySelector('#am1').value == 'pm') {
+						hours += 12;
+					}
+
+					// Format number strings for time
+					hours = ("0" + hours).slice(-2);
+					minutes = ("0" + minutes).slice(-2);
+
+					habitAlarms.push(hours + ':' + minutes);
+				}
+				habitToAdd.set("alarms", habitAlarms);
 
 				// Image upload
 				var iconID;
